Change Picture: Avoid using huge data URLs.

Capture was failing because data URLs are sometimes too long.
This avoids the use of GURLs with this limitation and creates
object URLs for PNG images to ensure that they are displayed
correctly.

Bug: 773981
Test: manual
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I9dd19aa346874a690f1fab2965baec69c9f6f3c2